--- a/compose-mac.yaml
+++ b/compose-mac.yaml
@@ -75,7 +75,7 @@ services:
   # BI Analytics Data Service
   create-participant-screening-episode:
     container_name: create-participant-screening-episode
-    restart: on-failure
+    restart: always
     build:
       context: ./src/
       dockerfile: ./BIAnalyticsDataService/CreateParticipantScreeningEpisode/Dockerfile
@@ -91,7 +91,7 @@ services:
 
   create-participant-screening-profile:
     container_name: create-participant-screening-profile
-    restart: on-failure
+    restart: always
     build:
       context: ./src/
       dockerfile: ./BIAnalyticsDataService/CreateParticipantScreeningProfile/Dockerfile
@@ -108,7 +108,7 @@ services:
   # BI Analytics Service
   create-data-assets:
     container_name: create-data-assets
-    restart: on-failure
+    restart: always
     build:
       context: ./src/
       dockerfile: ./BIAnalyticsService/CreateDataAssets/Dockerfile
@@ -128,7 +128,7 @@ services:
   # Episode Data Service
   create-episode:
     container_name: create-episode
-    restart: on-failure
+    restart: always
     build:
       context: ./src/
       dockerfile: ./EpisodeDataService/CreateEpisode/Dockerfile
@@ -143,7 +143,7 @@ services:
 
   get-episode:
     container_name: get-episode
-    restart: on-failure
+    restart: always
     build:
       context: ./src/
       dockerfile: ./EpisodeDataService/GetEpisode/Dockerfile
@@ -159,7 +159,7 @@ services:
 
   update-episode:
     container_name: update-episode
-    restart: on-failure
+    restart: always
     build:
       context: ./src/
       dockerfile: ./EpisodeDataService/UpdateEpisode/Dockerfile
@@ -176,7 +176,7 @@ services:
   # Episode Integration Service
   receive-data:
     container_name: receive-data
-    restart: on-failure
+    restart: always
     build:
       context: ./src/
       dockerfile: ./EpisodeIntegrationService/ReceiveData/Dockerfile
@@ -195,7 +195,7 @@ services:
 
   process-data:
     container_name: process-data
-    restart: on-failure
+    restart: always
     build:
       context: ./src/
       dockerfile: ./EpisodeIntegrationService/ProcessData/Dockerfile
@@ -213,7 +213,7 @@ services:
   # Episode Management Service
   create-update-episode:
     container_name: create-update-episode
-    restart: on-failure
+    restart: always
     build:
       context: ./src/
       dockerfile: ./EpisodeManagementService/CreateUpdateEpisode/Dockerfile
@@ -231,7 +231,7 @@ services:
 
   get-episode-mgmt:
     container_name: get-episode-mgmt
-    restart: on-failure
+    restart: always
     build:
       context: ./src/
       dockerfile: ./EpisodeManagementService/GetEpisode/Dockerfile
@@ -248,7 +248,7 @@ services:
   # Mesh Mailbox Management Service
   retrieve-mesh-file:
     container_name: retrieve-mesh-file
-    restart: on-failure
+    restart: always
     build:
       context: ./src/
       dockerfile: ./MeshIntegrationService/RetrieveMeshFile/Dockerfile
@@ -273,7 +273,7 @@ services:
   # Participant Management Service
   get-participant:
     container_name: get-participant
-    restart: on-failure
+    restart: always
     build:
       context: ./src/
       dockerfile: ./ParticipantManagementService/GetParticipant/Dockerfile
@@ -288,7 +288,7 @@ services:
 
   update-participant:
     container_name: update-participant
-    restart: on-failure
+    restart: always
     build:
       context: ./src/
       dockerfile: ./ParticipantManagementService/UpdateParticipant/Dockerfile
