feat: changed function name to ReceiveData and fixed formatting issue

--- a/tests/EpisodeIntegrationServiceTests/ReceiveDataTests/ReceiveDataTests.csproj
+++ b/tests/EpisodeIntegrationServiceTests/ReceiveDataTests/ReceiveDataTests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\EpisodeIntegrationService\ProcessData\ProcessData.csproj" />
+    <ProjectReference Include="..\..\..\src\EpisodeIntegrationService\ReceiveData\ReceiveData.csproj" />
     <ProjectReference Include="..\..\TestUtils\TestUtils.csproj" />
   </ItemGroup>
 
