fix: minor correction in launch file

--- a/src/EpisodeIntegrationService/ReceiveData/Properties/launchSettings.json
+++ b/src/EpisodeIntegrationService/ReceiveData/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "processData": {
+    "ReceiveData": {
       "commandName": "Project",
       "commandLineArgs": "--port 7072",
       "launchBrowser": false
