blob container now parameterised

--- a/.env.template
+++ b/.env.template
@@ -2,6 +2,7 @@
 
 # Enter the connection string for azurite in the quotes, the connection string can be found at https://github.com/Azure/Azurite?tab=readme-ov-file#connection-strings
 AZURITE_CONNECTION_STRING=""
+AZURITE_CONTAINER_NAME="sample-container" #Azure blob container name
 
 # Database name and SA password
 DB_CONNECTION="" # sql-database for mac, 127.0.0.1 for windows
@@ -15,8 +16,6 @@ MESHKEYPASSPHRASE="" #Passpharse for the private key for authenticating against 
 MESHAPIBASEURL=http://localhost:8700/messageexchange #Mesh mailbox URL host.docker.internal for mac and localhost for windows
 BSSMAILBOX=X26ABC1 #Mesh mailbox name
 
-# Azurite blob container name
-BSSCONTAINERNAME="sample-container" #Azure blob container name
 
 
 
