--- a/compose-win.yaml
+++ b/compose-win.yaml
@@ -28,6 +28,7 @@ services:
       - azurite
     environment:
       - AZURITE_CONNECTION_STRING=${AZURITE_CONNECTION_STRING}
+      - AZURITE_CONTAINER_NAME=${AZURITE_CONTAINER_NAME}
 
   sql-database:
     container_name: sql-database
