feat: Dtoss 4404 update episode integration service to handle csv files (#38)
* feat: updating processData function to read CSV file instead of JSON

* feat: updating to handle large files

* feat: updating unit tests and fixing bugs

* feat: removing duplicated class

* feat: small formating changes

* feat: format fixes

* feat: adding validation and allowing for bad rows

* feat: improved unit test

* fix: fixing formatting issues

* fix: fixing issue with missing async

* fix: fixing issue with missing async

* fix: adding exception handling

* fix: adding exception handling

* feat: improved test coverage

* feat: removing retreive data function

* feat: updating unit tests

* fix: format issue

* feat: changed function name to ReceiveData and fixed formatting issue

* fix: fixing build error

* fix: minor correction in launch file

* feat: replacing json test files with new csv files

* fix: fixing issue with app settings

* feat: removing code not needed

* fix: fixing naming issue

--- a/src/EpisodeIntegrationService/ReceiveData/ReceiveData.csproj
+++ b/src/EpisodeIntegrationService/ReceiveData/ReceiveData.csproj
@@ -7,8 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.19.0" />
-    <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.15.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Storage.Blobs" Version="6.6.0" />
   </ItemGroup>
@@ -22,10 +22,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\Shared\Common\Common.csproj" />
     <ProjectReference Include="..\..\Shared\Model\Model.csproj" />
   </ItemGroup>
-  </Project>
+</Project>
