--- a/src/EpisodeIntegrationService/ReceiveData/local.settings.json.template
+++ b/src/EpisodeIntegrationService/ReceiveData/local.settings.json.template
@@ -3,9 +3,10 @@
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
-    "ProcessDataURL": "http://localhost:7072/api/ProcessData"
+    "EpisodeManagementUrl": "http://localhost:6006/api/CreateUpdateEpisode",
+    "ParticipantManagementUrl": "http://localhost:7074/api/UpdateParticipant"
   },
   "Host": {
-    "LocalHttpPort": 7071
+    "LocalHttpPort": 7072
   }
 }
