feat: changes timer to use local settings

--- a/src/MeshIntegrationService/RetrieveMeshFile/local.settings.json.template
+++ b/src/MeshIntegrationService/RetrieveMeshFile/local.settings.json.template
@@ -8,8 +8,8 @@
         "BSSContainerName": "sample-container",
         "MeshPassword": "password",
         "MeshSharedKey": "TestKey",
-        "MeshKeyPassphrase":"test123"
-
+        "MeshKeyPassphrase":"test123",
+        "TimerExpression":"*/5 * * * *"
     },
     "Host": {
       "LocalHttpPort": 6777
