--- a/compose-mac.yaml
+++ b/compose-mac.yaml
@@ -254,6 +254,7 @@ services:
       - MeshPassword=${MESHPASSWORD}
       - MeshSharedKey=${MESHSHAREDKEY}
       - MeshKeyPassphrase=${MESHKEYPASSPHRASE}
+      - TimerExpression=*/5 * * * *
 
   # Participant Management Service
   get-participant:
