--- a/src/EpisodeIntegrationService/ReceiveData/ReceiveData.csproj
+++ b/src/EpisodeIntegrationService/ReceiveData/ReceiveData.csproj
@@ -24,5 +24,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\Common\Common.csproj" />
     <ProjectReference Include="..\..\Shared\Model\Model.csproj" />
+    <ProjectReference Include="..\..\Shared\Data\Data.csproj" />
   </ItemGroup>
 </Project>
