--- a/compose-mac.yaml
+++ b/compose-mac.yaml
@@ -74,8 +74,8 @@ services:
       - DB_CONNECTION=${DB_CONNECTION}
 
   # BI Analytics Data Service
-  create-participant-screening-episode:
-    container_name: create-participant-screening-episode
+  create-participant-screening-episode-data:
+    container_name: create-participant-screening-episode-data
     restart: always
     build:
       context: ./src/
@@ -90,8 +90,8 @@ services:
       - ASPNETCORE_URLS=http://*:6010
       - ServiceInsightsDbConnectionString=Server=${DB_CONNECTION},1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
 
-  create-participant-screening-profile:
-    container_name: create-participant-screening-profile
+  create-participant-screening-profile-data:
+    container_name: create-participant-screening-profile-data
     restart: always
     build:
       context: ./src/
@@ -107,12 +107,29 @@ services:
       - ServiceInsightsDbConnectionString=Server=${DB_CONNECTION},1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
 
   # BI Analytics Service
-  create-data-assets:
-    container_name: create-data-assets
+  create-participant-screening-episode:
+    container_name: create-participant-screening-episode
     restart: always
     build:
       context: ./src/
-      dockerfile: ./BIAnalyticsService/CreateDataAssets/Dockerfile
+      dockerfile: ./BIAnalyticsService/CreateParticipantScreeningEpisode/Dockerfile
+    networks:
+      - app-network
+    ports:
+      - "6008:6008"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
+      - ASPNETCORE_URLS=http://*:6008
+      - GetEpisodeUrl=http://get-episode-mgmt:6060/api/GetEpisode
+      - CreateParticipantScreeningEpisodeUrl=http://create-participant-screening-episode-data:6010/api/CreateParticipantScreeningEpisode
+
+  create-participant-screening-profile:
+    container_name: create-participant-screening-profile
+    restart: always
+    build:
+      context: ./src/
+      dockerfile: ./BIAnalyticsService/CreateParticipantScreeningProfile/Dockerfile
     networks:
       - app-network
     ports:
@@ -121,10 +138,24 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:6009
-      - GetEpisodeUrl=http://get-episode-mgmt:6060/api/GetEpisode
       - GetParticipantUrl=http://get-participant:6061/api/GetParticipant
-      - CreateParticipantScreeningEpisodeUrl=http://create-participant-screening-episode:6010/api/CreateParticipantScreeningEpisode
-      - CreateParticipantScreeningProfileUrl=http://create-participant-screening-profile:6011/api/CreateParticipantScreeningProfile
+      - CreateParticipantScreeningProfileUrl=http://create-participant-screening-profile-data:6011/api/CreateParticipantScreeningProfile
+      - DemographicsServiceUrl=http://get-demographics-data:6080/api/GetDemographicsData
+
+  # Demographics Service
+  get-demographics-data:
+    container_name: get-demographics-data
+    restart: always
+    build:
+      context: ./src/
+      dockerfile: ./DemographicsService/GetDemographicsData/Dockerfile
+    networks:
+      - app-network
+    ports:
+      - "6080:6080"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://*:6080
 
   # Episode Data Service
   create-episode:
