feat: adding Organisation lookup table and adding function to get data

--- a/src/ReferenceDataService/GetOrganisationData/GetOrganisationData.csproj
+++ b/src/ReferenceDataService/GetOrganisationData/GetOrganisationData.csproj
@@ -25,5 +25,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\Model\Model.csproj" />
+    <ProjectReference Include="..\..\Shared\Data\Data.csproj" />
   </ItemGroup>
 </Project>
