--- a/compose-mac.yaml
+++ b/compose-mac.yaml
@@ -317,3 +317,20 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:7074
+
+  # Reference Data Service
+  get-organisation-data:
+    container_name: get-organisation-data
+    restart: always
+    build:
+      context: ./src/
+      dockerfile: ./ReferenceDataService/GetReferenceData/Dockerfile
+    networks:
+      - app-network
+    ports:
+      - "6081:6081"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
+      - ASPNETCORE_URLS=http://*:6081
+      - ServiceInsightsDbConnectionString=Server=${DB_CONNECTION},1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
