--- a/compose-win.yaml
+++ b/compose-win.yaml
@@ -96,12 +96,10 @@ services:
   # BI Analytics Service
   create-participant-screening-episode:
     container_name: create-participant-screening-episode
-    restart: always
+    network_mode: host
     build:
       context: ./src/
       dockerfile: ./BIAnalyticsService/CreateParticipantScreeningEpisode/Dockerfile
-    networks:
-      - app-network
     ports:
       - "6008:6008"
     environment:
@@ -111,14 +109,12 @@ services:
       - GetEpisodeUrl=http://127.0.0.1:6060/api/GetEpisode
       - CreateParticipantScreeningEpisodeUrl=http://127.0.0.1:6010/api/CreateParticipantScreeningEpisode
 
-    create-participant-screening-profile:
+  create-participant-screening-profile:
     container_name: create-participant-screening-profile
-    restart: always
+    network_mode: host
     build:
       context: ./src/
       dockerfile: ./BIAnalyticsService/CreateParticipantScreeningProfile/Dockerfile
-    networks:
-      - app-network
     ports:
       - "6009:6009"
     environment:
@@ -132,12 +128,10 @@ services:
   # Demographics Service
   get-demographics-data:
     container_name: get-demographics-data
-    restart: always
+    network_mode: host
     build:
       context: ./src/
       dockerfile: ./DemographicsService/GetDemographicsData/Dockerfile
-    networks:
-      - app-network
     ports:
       - "6080:6080"
     environment:
@@ -278,3 +272,17 @@ services:
     environment:
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:7074
+
+  # Reference Data Service
+  get-organisation-data:
+    container_name: get-organisation-data
+    network_mode: host
+    build:
+      context: ./src/
+      dockerfile: ./ReferenceDataService/GetReferenceData/Dockerfile
+    ports:
+      - "6081:6081"
+    environment:
+      - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
+      - ASPNETCORE_URLS=http://*:6081
+      - ServiceInsightsDbConnectionString=Server=127.0.0.1,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
