--- a/.azuredevops/pipelines/cd-infrastructure-dev-audit.yaml
+++ b/.azuredevops/pipelines/cd-infrastructure-dev-audit.yaml
@@ -11,32 +11,35 @@ trigger:
       - infrastructure/*
 
 pool:
-  #vmImage: ubuntu-latest
-  name: private-pool-prod-uks
+  vmImage: ubuntu-latest
+  # name: private-pool-dev-uks
 
 resources:
   repositories:
     - repository: dtos-devops-templates
       type: github
       name: NHSDigital/dtos-devops-templates
-      ref: 46e5d81bf58a7b9324a35e191eac7f6cc3660dfd
+      ref: 6698a57ef95f35661bb668e1b929e6894a554ac6
       endpoint: NHSDigital
 
 variables:
-  - group: prod_global_variable_group
-  - group: prod_hub_variable_group
-  - group: preprod_core_variable_group
+  - group: DEV_audit_backend
+  - group: DEV_hub_backend_remote_state
   - name: TF_DIRECTORY
-    value: $(System.DefaultWorkingDirectory)/$(System.TeamProject)/infrastructure/tf-core
+    value: $(System.DefaultWorkingDirectory)/$(System.TeamProject)/infrastructure/tf-audit
+  - name: TF_VERSION
+    value: 1.9.2
+  - name: TF_PLAN_ARTIFACT
+    value: tf_plan_audit_DEV
   - name: ENVIRONMENT
-    value: preprod
+    value: development
 
 stages:
   - stage: terraform_plan
     displayName: Terraform Plan
     condition: eq(variables['Build.Reason'], 'Manual')
     variables:
-      tfvars: environments/$(ENVIRONMENT).tfvars
+      tfVarsFile: environments/$(ENVIRONMENT).tfvars
     jobs:
       - job: init_and_plan
         displayName: Init, plan, store artifact
