--- a/src/BIAnalyticsDataService/GetParticipantScreeningProfileData/local.settings.json.template
+++ b/src/BIAnalyticsDataService/GetParticipantScreeningProfileData/local.settings.json.template
@@ -3,7 +3,7 @@
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
-    "GetEpisodeUrl": "http://localhost:6070/api/GetEpisode"
+    "ServiceInsightsDbConnectionString": "YOUR_CONNECTION_STRING"
   },
   "Host": {
     "LocalHttpPort": 6062
