--- a/src/BIAnalyticsService/GetParticipantScreeningProfile/local.settings.json.template
+++ b/src/BIAnalyticsService/GetParticipantScreeningProfile/local.settings.json.template
@@ -3,7 +3,7 @@
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
-    "GetEpisodeUrl": "http://localhost:6070/api/GetEpisode"
+    "GetProfilesUrl": "http://localhost:6062/api/GetParticipantScreeningProfileData"
   },
   "Host": {
     "LocalHttpPort": 6063
