feat: added unit tests for the management service function and changed naming conventions

--- a/tests/BIAnalyticsManagementServiceTests/CreateParticipantScreeningEpisodeTests/CreateParticipantScreeningEpisodeTests.csproj
+++ b/tests/BIAnalyticsManagementServiceTests/CreateParticipantScreeningEpisodeTests/CreateParticipantScreeningEpisodeTests.csproj
@@ -23,7 +23,7 @@
 
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\BIAnalyticsService\CreateParticipantScreeningEpisode\CreateParticipantScreeningEpisode.csproj" />
+    <ProjectReference Include="..\..\..\src\BIAnalyticsManagementService\CreateParticipantScreeningEpisode\CreateParticipantScreeningEpisode.csproj" />
     <ProjectReference Include="..\..\TestUtils\TestUtils.csproj" />
   </ItemGroup>
 
