--- a/tests/BIAnalyticsManagementServiceTests/GetParticipantScreeningEpisodeTests/GetParticipantScreeningEpisodeTests.csproj
+++ b/tests/BIAnalyticsManagementServiceTests/GetParticipantScreeningEpisodeTests/GetParticipantScreeningEpisodeTests.csproj
@@ -4,12 +4,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
-<ItemGroup>
+  <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
@@ -21,9 +20,8 @@
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
-
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\BIAnalyticsService\CreateParticipantScreeningProfile\CreateParticipantScreeningProfile.csproj" />
+    <ProjectReference Include="..\..\..\src\BIAnalyticsManagementService\GetParticipantScreeningEpisode\GetParticipantScreeningEpisode.csproj" />
     <ProjectReference Include="..\..\TestUtils\TestUtils.csproj" />
   </ItemGroup>
 
