feat: created containers for new functions in the compose files and changed some docker file paths to match the BIAnalyticsManagementService

--- a/compose-mac.yaml
+++ b/compose-mac.yaml
@@ -106,13 +106,29 @@ services:
       - ASPNETCORE_URLS=http://*:6011
       - ServiceInsightsDbConnectionString=Server=${DB_CONNECTION},1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
 
-  # BI Analytics Service
+  get-participant-screening-episode-data:
+    container_name: get-participant-screening-episode-data
+    restart: always
+    build:
+      context: ./src/
+      dockerfile: ./BIAnalyticsDataService/GetParticipantScreeningEpisodeData/Dockerfile
+    networks:
+      - app-network
+    ports:
+      - "6007:6007"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
+      - ASPNETCORE_URLS=http://*:6007
+      - ServiceInsightsDbConnectionString=Server=${DB_CONNECTION},1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
+
+  # BI Analytics Management Service
   create-participant-screening-episode:
     container_name: create-participant-screening-episode
     restart: always
     build:
       context: ./src/
-      dockerfile: ./BIAnalyticsService/CreateParticipantScreeningEpisode/Dockerfile
+      dockerfile: ./BIAnalyticsManagementService/CreateParticipantScreeningEpisode/Dockerfile
     networks:
       - app-network
     ports:
@@ -129,7 +145,7 @@ services:
     restart: always
     build:
       context: ./src/
-      dockerfile: ./BIAnalyticsService/CreateParticipantScreeningProfile/Dockerfile
+      dockerfile: ./BIAnalyticsManagementService/CreateParticipantScreeningProfile/Dockerfile
     networks:
       - app-network
     ports:
@@ -141,6 +157,23 @@ services:
       - GetParticipantUrl=http://get-participant:6061/api/GetParticipant
       - CreateParticipantScreeningProfileUrl=http://create-participant-screening-profile-data:6011/api/CreateParticipantScreeningProfile
       - DemographicsServiceUrl=http://get-demographics-data:6080/api/GetDemographicsData
+
+  get-participant-screening-episode:
+    container_name: get-participant-screening-episode
+    restart: always
+    build:
+      context: ./src/
+      dockerfile: ./BIAnalyticsManagementService/GetParticipantScreeningEpisode/Dockerfile
+    networks:
+      - app-network
+    ports:
+      - "6006:6006"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
+      - ASPNETCORE_URLS=http://*:6006
+      - GetParticipantScreeningEpisodeDataUrl=http://localhost:6007/api/GetParticipantScreeningEpisodeData
+
 
   # Demographics Service
   get-demographics-data:
