--- a/compose-win.yaml
+++ b/compose-win.yaml
@@ -151,7 +151,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:6063
-      - GetProfilesUrl=http://localhost:6062/api/GetParticipantScreeningProfileData
+      - GetProfilesUrl=http://127.0.0.1:6062/api/GetParticipantScreeningProfileData
 
   # Demographics Service
   get-demographics-data:
