DTOS-00000-fix-pipeline-trigger (#64)

--- a/.azuredevops/pipelines/cd-infrastructure-dev-audit.yaml
+++ b/.azuredevops/pipelines/cd-infrastructure-dev-audit.yaml
@@ -2,17 +2,12 @@
 
 name: $(Build.SourceBranchName)-$(Date:yyyyMMdd)_$(Rev:r)
 
-trigger:
-  branches:
-    include:
-      - main
-  paths:
-    include:
-      - infrastructure/*
+trigger: none
+pr: none
 
 pool:
-  vmImage: ubuntu-latest
-  # name: private-pool-dev-uks
+  # vmImage: ubuntu-latest
+  name: private-pool-dev-uks
 
 resources:
   repositories:
