--- a/.github/workflows/cicd-1-pull-request.yaml
+++ b/.github/workflows/cicd-1-pull-request.yaml
@@ -102,10 +102,9 @@ jobs:
     secrets: inherit
   build-image-stage: # Recommended maximum execution time is 3 minutes
     name: Image build stage
-    needs: [metadata]
-    # needs: [metadata, commit-stage, test-stage]
+    needs: [metadata, commit-stage, test-stage]
     uses: NHSDigital/dtos-devops-templates/.github/workflows/stage-3-build-images.yaml@main
-    # if: needs.metadata.outputs.does_pull_request_exist == 'true' || github.ref == 'refs/heads/main' || (github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'reopened'))
+    if: needs.metadata.outputs.does_pull_request_exist == 'true' || github.ref == 'refs/heads/main' || (github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'reopened'))
     with:
       docker_compose_file: ./compose.yaml
       excluded_containers_csv_list: azurite,azurite-setup,sql-database,database-setup
