Feat: Scripts to automate generation of certificates for mesh mailbox (#65)
* feat: add scripts for mesh certificate generation

* docs: prettier the readme

* docs: prettier the readme

* docs: prettier the readme

* chore: remove unused

* update gitignore to skip certificate related files

* integrate .gitignore from main to resolve conflict

* chore: remove unused file

* docs: update readme

* docs: refine readme for mesh mailbox certificates

* chore: resolve conflict in .gitignore

* feat: add validation checks

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,10 @@ appsettings.json
 
 # ignore pre-commit-config.yaml
 .pre-commit-config.yaml
+
+# SSL certificates etc
+.csr
+.crt
+.keystore
+.p12
+
